fixing a logo height discrepancy in safari and changing rsvp svg text to regular text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,10 @@ text {
 	width: 35px;
 }
 
+#rsvp .content #rsvpForm h2 {
+	text-align: center;
+}
+
 #rsvp .content #rsvpForm p {
 	text-align: left;
 }
